# ODE-Solver

./: .codecov.yml  .gitignore  .travis.yml  AnalyticalExplicitSolver.cpp  AnalyticalImplicitSolver.cpp  CMakeLists.txt  Doxyfile.in  Doxygen.in  EulerIntegrator.cpp  EulerIntegrator.h  Exception.h  Function.h  ImplicitEuler.cpp  ImplicitEuler.h  ImplicitIntegrator.cpp  ImplicitIntegrator.h  ImplicitMidpoint.cpp  ImplicitMidpoint.h  ImplicitSolver.cpp  ImplicitSolver.h  ImplicitTrapezoidal.cpp  ImplicitTrapezoidal.h  Integrator.cpp  Integrator.h  Makefile  NewtonMethod.cpp  NewtonMethod.h  README  README.md  RungeKutta2.cpp  RungeKutta4.cpp  Solver.cpp  Solver.h  TEST_AnalyticalExplicitSolver.cpp  TEST_AnalyticalImplicitSolver.cpp  TEST_EulerIntegrator.cpp  TEST_Function.cpp  TEST_ImplicitEuler  TEST_ImplicitEuler.cpp  TEST_ImplicitMidpoint.cpp  (+11 more)
.travis/: before_install.sh  build.sh
docs/: TODO
docs/description/: ProjectDescription.txt
src/: CMakeLists.txt
src/ExplicitIntegrators/: CMakeLists.txt  EulerIntegrator.cpp  EulerIntegrator.h  Integrator.cpp  RungeKutta2.cpp  RungeKutta2.h  RungeKutta4.cpp  RungeKutta4.h
src/ImplicitIntegrators/: CMakeLists.txt  ImplicitEuler.cpp  ImplicitEuler.h  ImplicitMidpoint.cpp  ImplicitMidpoint.h  ImplicitTrapezoidal.cpp  ImplicitTrapezoidal.h
src/Integrators/: CMakeLists.txt  ExplicitIntegrator.cpp  ExplicitIntegrator.h  ImplicitIntegrator.cpp  ImplicitIntegrator.h  Integrator.cpp  Integrator.h
src/NumericalMethods/: CMakeLists.txt  NewtonMethod.cpp  NewtonMethod.h
src/Solvers/: AnalyticalExplicitSolver.cpp  AnalyticalExplicitSolver.h  AnalyticalImplicitSolver.cpp  AnalyticalImplicitSolver.h  AnalyticalSolver.cpp  AnalyticalSolver.h  CMakeLists.txt  ImplicitSolver.cpp  ImplicitSolver.h  Solver.cpp  Solver.h
src/Tests/: CMakeLists.txt  TEST_AnalyticalExplicitSolver.cpp  TEST_AnalyticalImplicitSolver.cpp  TEST_AnalyticalSolver.cpp  TEST_EulerIntegrator.cpp  TEST_ImplicitEuler.cpp  TEST_ImplicitMidpoint.cpp  TEST_ImplicitSolver.cpp  TEST_ImplicitTrapezoidal.cpp  TEST_NewtonMethod.cpp  TEST_RungeKutta2.cpp  TEST_RungeKutta4.cpp  TEST_Solver.cpp  testfunction.h
src/Utilities/: Exception.h  Function.h
tools/: clang-format.sh
