cmake_minimum_required(VERSION 3.0)
project(ODE)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(src/Integrators)
add_subdirectory(src/ExplicitIntegrators)
add_subdirectory(src/ImplicitIntegrators)
add_subdirectory(src/Solvers)
add_subdirectory(src/NumericalMethods)
add_subdirectory(src/Tests)

enable_testing()

add_test(UNITTEST_NewtonMethod bin/TEST_NewtonMethod)
add_test(UNITTEST_EulerIntegrator bin/TEST_EulerIntegrator)
add_test(UNITTEST_RungeKutta2 bin/TEST_RungeKutta2)
add_test(UNITTEST_RungeKutta4 bin/TEST_RungeKutta4)
add_test(UNITTEST_ImplicitEuler bin/TEST_ImplicitEuler)
add_test(UNITTEST_ImplicitMidpoint bin/TEST_ImplicitMidpoint)
add_test(UNITTEST_ImplicitTrapezoidal bin/TEST_ImplicitTrapezoidal)
add_test(UNITTEST_Solver bin/TEST_Solver)
add_test(UNITTEST_AnalyticalSolver bin/TEST_AnalyticalSolver)