add_executable(TEST_NewtonMethod TEST_NewtonMethod.cpp)
target_link_libraries (TEST_NewtonMethod LINK_PUBLIC NewtonMethod)

add_executable(TEST_EulerIntegrator TEST_EulerIntegrator.cpp)
target_link_libraries (TEST_EulerIntegrator LINK_PUBLIC Integrator ExplicitIntegrator EulerIntegrator)

add_executable(TEST_RungeKutta2 TEST_RungeKutta2.cpp)
target_link_libraries (TEST_RungeKutta2 LINK_PUBLIC Integrator ExplicitIntegrator RungeKutta2)

add_executable(TEST_RungeKutta4 TEST_RungeKutta4.cpp)
target_link_libraries (TEST_RungeKutta4 LINK_PUBLIC Integrator ExplicitIntegrator RungeKutta4)

add_executable(TEST_ImplicitEuler TEST_ImplicitEuler.cpp)
target_link_libraries (TEST_ImplicitEuler LINK_PUBLIC Integrator ImplicitIntegrator ImplicitEuler NewtonMethod)

add_executable(TEST_ImplicitMidpoint TEST_ImplicitMidpoint.cpp)
target_link_libraries (TEST_ImplicitMidpoint LINK_PUBLIC Integrator ImplicitIntegrator ImplicitMidpoint NewtonMethod)

add_executable(TEST_ImplicitTrapezoidal TEST_ImplicitTrapezoidal.cpp)
target_link_libraries (TEST_ImplicitTrapezoidal LINK_PUBLIC Integrator ImplicitIntegrator ImplicitTrapezoidal NewtonMethod)

add_executable(TEST_Solver TEST_Solver.cpp)
target_link_libraries (TEST_Solver LINK_PUBLIC Solver Integrator ExplicitIntegrator EulerIntegrator RungeKutta2 RungeKutta4 ImplicitIntegrator ImplicitEuler ImplicitMidpoint ImplicitTrapezoidal NewtonMethod)

add_executable(TEST_AnalyticalSolver TEST_AnalyticalSolver.cpp)
target_link_libraries (TEST_AnalyticalSolver LINK_PUBLIC AnalyticalSolver Solver Integrator ExplicitIntegrator EulerIntegrator RungeKutta2 RungeKutta4 ImplicitIntegrator ImplicitEuler ImplicitMidpoint ImplicitTrapezoidal NewtonMethod)