add_executable(TEST_NewtonMethod TEST_NewtonMethod.cpp)
target_link_libraries (TEST_NewtonMethod LINK_PUBLIC NewtonMethod)

add_executable(TEST_EulerIntegrator TEST_EulerIntegrator.cpp)
target_link_libraries (TEST_EulerIntegrator LINK_PUBLIC Integrator EulerIntegrator ExplicitIntegrator)

add_executable(TEST_RungeKutta2 TEST_RungeKutta2.cpp)
target_link_libraries (TEST_RungeKutta2 LINK_PUBLIC Integrator RungeKutta2 ExplicitIntegrator)

add_executable(TEST_RungeKutta4 TEST_RungeKutta4.cpp)
target_link_libraries (TEST_RungeKutta4 LINK_PUBLIC Integrator RungeKutta4 ExplicitIntegrator)

add_executable(TEST_ImplicitEuler TEST_ImplicitEuler.cpp)
target_link_libraries (TEST_ImplicitEuler LINK_PUBLIC Integrator ImplicitEuler NewtonMethod  ImplicitIntegrator)

add_executable(TEST_ImplicitMidpoint TEST_ImplicitMidpoint.cpp)
target_link_libraries (TEST_ImplicitMidpoint LINK_PUBLIC Integrator ImplicitMidpoint NewtonMethod ImplicitIntegrator)

add_executable(TEST_ImplicitTrapezoidal TEST_ImplicitTrapezoidal.cpp)
target_link_libraries (TEST_ImplicitTrapezoidal LINK_PUBLIC Integrator ImplicitTrapezoidal NewtonMethod ImplicitIntegrator)

add_executable(TEST_Solver TEST_Solver.cpp)
target_link_libraries (TEST_Solver LINK_PUBLIC Solver Integrator EulerIntegrator RungeKutta2 RungeKutta4  ExplicitIntegrator ImplicitEuler ImplicitMidpoint ImplicitTrapezoidal NewtonMethod  ImplicitIntegrator )

add_executable(TEST_AnalyticalSolver TEST_AnalyticalSolver.cpp)
target_link_libraries (TEST_AnalyticalSolver LINK_PUBLIC AnalyticalSolver Solver Integrator EulerIntegrator RungeKutta2 RungeKutta4  ExplicitIntegrator ImplicitEuler ImplicitMidpoint ImplicitTrapezoidal NewtonMethod  ImplicitIntegrator)